<resources>
    <string name="app_name">Homework2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="fourth_fragment">Fourth Fragment</string>
    <string name="home">Home</string>
    <string name="send">Send</string>
    <string name="_2f">2FA</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="enter_the_text">Enter the text</string>
    <string name="film_title">Film name</string>
    <string name="year_title">Year</string>
    <string name="description">Description</string>
    <string name="film_image">filmImage</string>
</resources>