<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detail_film_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginBottom="568dp"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/detail_film_title"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/film_title"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_film_image" />

    <TextView
        android:id="@+id/detail_year_title"
        android:layout_width="125dp"
        android:layout_height="31dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-10dp"
        android:text="@string/year_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/detail_film_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_film_title" />

    <TextView
        android:id="@+id/detail_description"
        android:layout_width="328dp"
        android:layout_height="777dp"
        android:layout_marginHorizontal="40dp"
        android:textSize="20sp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_year_title" />

    <ImageButton
        android:id="@+id/toback_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="5dp"
        android:background="@null"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>